Package: R.filesets
===================

Version: 2.7.0.x [2015-01-12]
o Added RDataFile and RDataFileSet classes for *.RData files.
o Package now requires R (>= 3.0.0) and BioC (>= 2.13), which were
  released April 2013 and are in fact old and it's recommended to
  use a more recent version of R.


Version: 2.6.2 [2015-01-05]
o CLEANUP: Using requireNamespace() instead of require() internally.


Version: 2.6.1 [2014-12-27]
o ROBUSTNESS: Added test for reading subset of a large tabular file.
o BUG FIX: as.character() for ChecksumFile gave an error when
  the checksum files was missing.


Version: 2.6.0 [2014-08-26]
o Added support for sortBy(..., by="filesize") and
  sortBy(..., decreasing=TRUE) for GenericDataFileSet.
o Added rep() for GenericDataFileSet.
o Submitted to CRAN.


Version: 2.5.10 [2014-08-25]
o BUG FIX: readDataFrame() would ignore argument 'colClasses'
  iff it had no names.  Added package system test for this case.


Version: 2.5.9 [2014-08-23]
o BUG FIX: Using commentChar=NULL for TabularTextFile:s failed.


Version: 2.5.8 [2014-08-19]
o Added readChecksums() for ChecksumFileSet.


Version: 2.5.7 [2014-08-17]
o BUG FIX: byPath() for GenericDataFileSet would output verbose message
  enumerating files loaded to stdout instead of stderr.


Version: 2.5.6 [2014-08-07]
o BUG FIX: dsApply() for GenericDataFileSet would coerce argument
  'verbose' to logical before applying the function.


Version: 2.5.5 [2014-08-02]
o BUG FIX: Argument 'sep' for readDataFrame() would only work for
  ',' and '\t'; now it works for any separator.
o Bumped package dependencies.


Version: 2.5.4 [2014-06-11]
o Now indexOf() first searched by exact names, then as before, i.e.
  by regular expression and fixed pattern matching.  Added package
  system tests that contains particularly complicated cases for this.
  This was triggered by a rare but real use case causing an error in
  aroma.affymetrix.  Thanks Benilton Carvalho for reporting on this.